Fix error when loading a model from disk

--- a/notebooks/tensorflow_playground.ipynb
+++ b/notebooks/tensorflow_playground.ipynb
@@ -74,44 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "id": "ada89770",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_loss = loss_val.numpy()[0,0]\n",
-    "a_loss = 0.2699"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "b9ff4156",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff = np.e ** np.sqrt(a_loss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "b9fd49e7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.6812188029243489"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4341253160944203\n"
+     ]
     }
    ],
    "source": [
-    "diff"
+    "a_loss = loss_val.numpy()[0,0]\n",
+    "a_loss = 0.13\n",
+    "\n",
+    "diff = np.e ** np.sqrt(a_loss)\n",
+    "print(diff)"
    ]
   },
   {
