Fix missmatch between loss names

--- a/notebooks/tensorflow_playground.ipynb
+++ b/notebooks/tensorflow_playground.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "55f1abdb",
    "metadata": {},
    "outputs": [
@@ -133,126 +133,90 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-11 21:07:22.298228: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-12-12 22:20:14.562886: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "66d1e832",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-11 21:07:27.687850: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = tf.keras.layers.Input(shape=(2,), dtype=tf.float32)\n",
-    "y = x\n",
-    "\n",
-    "model = tf.keras.models.Model(inputs={'x': x}, outputs={'y': y})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e58c61e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<KerasTensor: shape=(None, 2) dtype=float32 (created by layer 'input_1')>]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.inputs"
+    "import tensorflow as tf\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b84c6781",
+   "id": "66d1e832",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x': <KerasTensor: shape=(None, 2) dtype=float32 (created by layer 'input_1')>}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d5e3d74e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tf.float32"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.input['x'].dtype"
+    "x = tf.keras.layers.Input(shape=(1,), dtype=tf.float32)\n",
+    "y1 = tf.keras.layers.Dense(units=1, name='y1')(x)\n",
+    "y2 = tf.keras.layers.Dense(units=1, name='y2')(y1)\n",
+    "\n",
+    "inner_model = tf.keras.models.Model(\n",
+    "    inputs={'x': x}, \n",
+    "    outputs={'y1': y1, 'y2': y2},\n",
+    "    name=\"inner_model\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9b233b23",
+   "id": "e58c61e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yy = inner_model(inner_model.input)\n",
+    "\n",
+    "outputs = {name: tf.keras.layers.Lambda(lambda x: x, name=name)(value) for name, value in yy.items()}\n",
+    "outer_model = tf.keras.models.Model(\n",
+    "    inputs=inner_model.input, \n",
+    "    outputs=outputs,\n",
+    "    name=\"outer_model\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d5e3d74e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'TensorShape' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/76/jk5mvn813bv1k_zmymwt5tpm0000gp/T/ipykernel_42057/4233616322.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TensorShape' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/5 [==============================] - 1s 3ms/step - loss: 12.4593 - y1_loss: 0.2952 - y2_loss: 12.1641\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fd478f80cd0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.input['x'].shape[1:].shape"
+    "train_ds = tf.data.Dataset.range(10).map(lambda x: ({'x': x}, {'y1': x+1, 'y2': x+2}))\n",
+    "batched = train_ds.batch(batch_size=2)\n",
+    "under_test = outer_model\n",
+    "under_test.compile(\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.01),\n",
+    "    loss={'y1': 'mse', 'y2': 'mse'}\n",
+    ")\n",
+    "under_test.fit(batched)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6977d903",
+   "id": "e458fb9e",
    "metadata": {},
    "outputs": [],
    "source": []
