--- a/notebooks/tf_dataset.ipynb
+++ b/notebooks/tf_dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bb784d70",
    "metadata": {},
    "outputs": [],
@@ -21,17 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9005732b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1 Pro\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-04 19:44:55.144770: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-12-04 19:44:55.145027: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
    "source": [
     "data = tf.data.Dataset.from_tensor_slices(range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c53f50b7",
    "metadata": {},
    "outputs": [
@@ -41,25 +57,27 @@
      "text": [
       "tf.Tensor(0, shape=(), dtype=int32)\n",
       "tf.Tensor(1, shape=(), dtype=int32)\n",
-      "tf.Tensor(2, shape=(), dtype=int32)\n",
-      "tf.Tensor(3, shape=(), dtype=int32)\n",
-      "tf.Tensor(4, shape=(), dtype=int32)\n",
-      "tf.Tensor(5, shape=(), dtype=int32)\n",
-      "tf.Tensor(6, shape=(), dtype=int32)\n",
-      "tf.Tensor(7, shape=(), dtype=int32)\n",
-      "tf.Tensor(8, shape=(), dtype=int32)\n",
-      "tf.Tensor(9, shape=(), dtype=int32)\n"
+      "tf.Tensor(2, shape=(), dtype=int32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-04 19:45:29.164270: W tensorflow/core/data/root_dataset.cc:266] Optimization loop failed: CANCELLED: Operation was cancelled\n"
      ]
     }
    ],
    "source": [
-    "for d in data:\n",
-    "    print(d)"
+    "for idx, d in enumerate(data):\n",
+    "    print(d)\n",
+    "    if idx == 2:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3494634a",
    "metadata": {},
    "outputs": [
@@ -110,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
